userPage-reducer, user page data fetching, problem with writing comments into state

--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -2,3 +2,15 @@
   width: 20%;
   background-color: chocolate;
 }
+
+.nav_link {
+  display: block;
+  text-decoration: none;
+  color: #fff;
+  height: 2em;
+  line-height: 2em;
+}
+
+.active {
+  background-color: lightslategray;
+}
