--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
   line-height: 1;
+  background-image: linear-gradient(to right, #434343 0%, black 100%);
 }
 ol, ul {
   list-style: none;
@@ -231,7 +232,6 @@ html {
 
 body {
   color: #404040;
-  background: white;
   font-size: 1rem; }
 
 p,
